--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-BDHC\ Simulation\ Battery\ Supply\ Mode.psimsch linguist-language=PSIM
+BDHC_Simulation_Battery_Supply_Mode.psimsch linguist-language=PSIM
